--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,45 +19,45 @@
           </ul>
         </div>
 
-        <div  class="col-lg-2 col-sm-4">
-          <ul>
-            <li><span class="list-header">{{ i18n "footer_moreheader" }}</span></li>
+        <!--<div  class="col-lg-2 col-sm-4">-->
+          <!--<ul>-->
+            <!--<li><span class="list-header">{{ i18n "footer_moreheader" }}</span></li>-->
 
-              <li><a href="{{ .LanguagePrefix }}/get-siacoin" >{{ i18n "title_getsiacoin" }}</a></li>
+              <!--<li><a href="{{ .LanguagePrefix }}/get-siacoin" >{{ i18n "title_getsiacoin" }}</a></li>-->
 
-              <li><a href="https://trello.com/b/Io1dDyuI/sia-public-roadmap" target=&#34;_blank&#34;>{{ i18n "title_roadmap" }}</a></li>
+              <!--<li><a href="https://trello.com/b/Io1dDyuI/sia-public-roadmap" target=&#34;_blank&#34;>{{ i18n "title_roadmap" }}</a></li>-->
 
-              <li><a href="https://github.com/NebulousLabs/Sia-UI" target=&#34;_blank&#34;>Github - UI</a></li>
+              <!--<li><a href="https://github.com/NebulousLabs/Sia-UI" target=&#34;_blank&#34;>Github - UI</a></li>-->
 
-              <li><a href="https://github.com/NebulousLabs/Sia" target=&#34;_blank&#34;>Github</a></li>
+              <!--<li><a href="https://github.com/NebulousLabs/Sia" target=&#34;_blank&#34;>Github</a></li>-->
 
-            </li>
-          </ul>
-        </div>
+            <!--</li>-->
+          <!--</ul>-->
+        <!--</div>-->
 
-        <div  class="col-lg-2 col-sm-4">
-          <ul>
-            <li><span class="list-header">{{ i18n "header_community" }}</span></li>
-              <li><a href="https://blog.sia.tech" target=&#34;_blank&#34;>{{ i18n "footer_blog" }}</a></li>
-              <li><a href="https://discord.gg/sia" target=&#34;_blank&#34;>Discord</a></li>
-              <li><a href="https://forum.sia.tech" target=&#34;_blank&#34;>{{ i18n "footer_forum" }}</a></li>
-              <li><a href="https://twitter.com/SiaTechHQ" target=&#34;_blank&#34;>Twitter</a></li>
-            </li>
-          </ul>
-        </div>
+        <!--<div  class="col-lg-2 col-sm-4">-->
+          <!--<ul>-->
+            <!--<li><span class="list-header">{{ i18n "header_community" }}</span></li>-->
+              <!--<li><a href="https://blog.sia.tech" target=&#34;_blank&#34;>{{ i18n "footer_blog" }}</a></li>-->
+              <!--<li><a href="https://discord.gg/sia" target=&#34;_blank&#34;>Discord</a></li>-->
+              <!--<li><a href="https://forum.sia.tech" target=&#34;_blank&#34;>{{ i18n "footer_forum" }}</a></li>-->
+              <!--<li><a href="https://twitter.com/SiaTechHQ" target=&#34;_blank&#34;>Twitter</a></li>-->
+            <!--</li>-->
+          <!--</ul>-->
+        <!--</div>-->
 
-        <div class="col-lg-3 col-lg-offset-3 col-sm-7 logos" class="col-lg-2 col-sm-4">
-          <ul>
-            <li><img src="/assets/globals/logo.svg" /><span class="list-header">{{ i18n "footer_backedby" }}</span></li>
-            <li><a href="http://www.nebulouslabs.com" target="_blank"><img src="/img/svg/nebulous-logo.svg" /></a></li>
-          </ul>
-        </div>
-        <div class="col-lg-12 questions" class="col-lg-2 col-sm-4">
-          <ul>
-            <li><span class="list-header">{{ i18n "footer_questions" }}</span></li>
-            <li><a href="javascript:groove.widget('open')" class="email btn btn-reverse"style="margin-top:9px;">{{ i18n "footer_contact" }}</a></li>
-          </ul>
-        </div>
+        <!--<div class="col-lg-3 col-lg-offset-3 col-sm-7 logos" class="col-lg-2 col-sm-4">-->
+          <!--<ul>-->
+            <!--<li><img src="/assets/globals/logo.svg" /><span class="list-header">{{ i18n "footer_backedby" }}</span></li>-->
+            <!--<li><a href="http://www.nebulouslabs.com" target="_blank"><img src="/img/svg/nebulous-logo.svg" /></a></li>-->
+          <!--</ul>-->
+        <!--</div>-->
+        <!--<div class="col-lg-12 questions" class="col-lg-2 col-sm-4">-->
+          <!--<ul>-->
+            <!--<li><span class="list-header">{{ i18n "footer_questions" }}</span></li>-->
+            <!--<li><a href="javascript:groove.widget('open')" class="email btn btn-reverse"style="margin-top:9px;">{{ i18n "footer_contact" }}</a></li>-->
+          <!--</ul>-->
+        <!--</div>-->
       </div>
     </div>
   </section>
@@ -67,29 +67,29 @@
         <div class="col-lg-9 col-md-9">
           <ul>
             <li>
-              <a href="https://github.com/NebulousLabs/Sia" target="_blank">
+              <a href="https://github.com/veritascoin" target="_blank">
                 <span class="icon"><img src="/img/svg/github-icon.svg"></span>
                 <span class="text">Github</span>
               </a>
             </li>
 
-            <li>
-              <a href="https://www.facebook.com/nebulouslabs/" target="_blank">
-                <span class="icon"><img src="/img/svg/facebook-icon.svg"></span>
-                <span class="text">{{ i18n "footer_like" }}</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/SiaTechHQ" target="_blank">
-                <span class="icon"><img src="/img/svg/twitter-icon.svg"></span>
-                <span class="text">{{ i18n "footer_follow" }}</span>
-              </a>
-            </li>
+            <!--<li>-->
+              <!--<a href="https://www.facebook.com/nebulouslabs/" target="_blank">-->
+                <!--<span class="icon"><img src="/img/svg/facebook-icon.svg"></span>-->
+                <!--<span class="text">{{ i18n "footer_like" }}</span>-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="https://twitter.com/SiaTechHQ" target="_blank">-->
+                <!--<span class="icon"><img src="/img/svg/twitter-icon.svg"></span>-->
+                <!--<span class="text">{{ i18n "footer_follow" }}</span>-->
+              <!--</a>-->
+            <!--</li>-->
           </ul>
         </div>
         <div class="col-lg-3 col-md-3">
           <p>
-            <span class="copyright">&copy; Nebulous Inc.</span>
+            <span class="copyright">&copy; VeritasCoin.</span>
           </p>
         </div>
       </div>
